# claude-almanac

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: embedder-calibrator.md  trust-boundary-reviewer.md
.claude/skills/add-embedder/: SKILL.md
.claude/skills/test-conventions/: SKILL.md
.claude/skills/trust-boundary-check/: SKILL.md
.github/workflows/: ci.yml  release.yml
commands/: almanac.md  digest.md  recall.md
docs/: architecture.md  codeindex.md  config.md  contributing.md  install.md
hooks/: hooks.json
scripts/: check_changelog.py  gemma_truncation_probe.py
skills/digest/: SKILL.md
skills/recall/: SKILL.md
src/claude_almanac/cli/: calibrate.py  codeindex.py  digest.py  main.py  recall.py  setup.py  status.py  tail.py
src/claude_almanac/codeindex/: arch.py  autoinject.py  config.py  db.py  init.py  keyword.py  log.py  refresh.py  scoring.py  search.py  serena_client.py  status.py  sym.py
src/claude_almanac/codeindex/assets/: arch_prompt.md
src/claude_almanac/codeindex/extractors/: __init__.py  base.py  dispatch.py  python_ast.py  regex_tuned.py  serena_fallback.py
src/claude_almanac/contentindex/: __init__.py  db.py  fuse.py  keyword.py  scoring.py  search.py
src/claude_almanac/core/: archive.py  config.py  curator.py  decay.py  dedup.py  paths.py  reembed.py  retrieve.py  versioning.py
src/claude_almanac/core/assets/: curator-prompt.md
src/claude_almanac/curators/: __init__.py  agent_sdk.py  anthropic_sdk.py  base.py  claude_cli.py  codex.py  factory.py  ollama.py
src/claude_almanac/digest/: __init__.py  activity_db.py  collectors.py  config.py  generator.py  notify.py  render.py  server.py
src/claude_almanac/digest/qa/: api.py  (+4 more)
src/claude_almanac/documents/: __init__.py  display.py  ingest.py  refresh.py  scoring.py
src/claude_almanac/edges/: cross_scope.py  expand.py  store.py
src/claude_almanac/embedders/: __init__.py  base.py  calibrate.py  factory.py  ollama.py  openai.py  profiles.py  voyage.py
src/claude_almanac/hooks/: curate.py  retrieve.py  rollup.py  upgrade.py  upgrade_runner.py
src/claude_almanac/platform/: __init__.py  base.py  linux_systemd.py  macos_launchd.py
src/claude_almanac/rollups/: generator.py  runner.py  transcript.py  triggers.py
tests/fixtures/transcripts/: chatty_output.jsonl  durable_memory_signal.jsonl  large_180kb.jsonl  pure_chatter.jsonl
tests/integration/: conftest.py  test_codeindex_end_to_end.py  test_codeindex_trust_boundary.py  test_curator_providers.py  test_decay_end_to_end.py  test_digest_end_to_end.py  test_doc_retrieval_smoke.py  test_edges_autoinject_e2e.py  test_end_to_end.py  test_rollup_fixture_parity.py  test_rollup_roundtrip.py  test_smoke_codeindex.py  test_smoke_digest.py  test_smoke_memory_roundtrip.py  test_versioning_end_to_end.py
tests/unit/: test_archive.py  test_archive_migration.py  test_archive_schema_v0_3_2.py  test_calibrate.py  test_cli_calibrate.py  test_cli_codeindex.py  test_cli_digest.py  test_cli_main.py  test_cli_recall.py  test_cli_recall_edges.py  test_cli_recall_rollups.py  test_cli_recall_unified.py  test_cli_setup.py  test_cli_status.py  test_cli_tail.py  test_config.py  test_config_v0_3_11.py  test_config_v0_3_2.py  test_curator.py  test_curator_agent_sdk.py  test_curator_edges.py  test_curator_parse_decisions_log.py  test_curator_subprocess_providers.py  test_curator_transcript.py  test_curator_unescaped_quotes.py  test_curators_anthropic.py  test_curators_base.py  test_curators_factory.py  test_curators_ollama.py  test_decay.py  test_dedup.py  test_digest_activity_db.py  test_digest_collectors.py  test_digest_collectors_kind.py  test_digest_config.py  test_digest_generator.py  test_digest_notify.py  test_digest_qa_api.py  test_digest_qa_deep.py  test_digest_qa_fast.py  (+44 more)
tests/unit/codeindex/: conftest.py  test_arch.py  test_autoinject.py  test_config.py  test_db.py  test_dispatch.py  test_extractor_base.py  test_fuse.py  test_init.py  test_keyword.py  test_log.py  test_python_ast.py  test_refresh.py  test_regex_tuned.py  test_retrieval_quality_fixtures.py  test_retrieval_quality_probe.py  test_search.py  test_search_hybrid.py  test_serena_fallback.py  test_status.py  test_sym.py
tests/unit/contentindex/: test_content_db.py  test_db.py  test_fuse.py  test_keyword.py  test_retrieval_quality_fixtures.py  test_retrieval_quality_probe.py  test_scoring_profile.py  test_search.py  test_search_hybrid.py
tests/unit/documents/: test_chunk_boundaries.py  test_display.py  test_doc_retrieval.py  test_ingest.py  test_markdown_extractor.py  test_refresh.py
(+25 files in other folders)
