[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-almanac"
version = "0.3.13"
description = "Daily intelligence layer for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sam McTaggart" }]
dependencies = [
  "sqlite-vec>=0.1.6",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "platformdirs>=4.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sse-starlette>=2.0",
  "markdown>=3.6",
  "claude-agent-sdk>=0.1",
  "anthropic>=0.40,<1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
voyage = ["voyageai>=0.2"]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.11",
  "types-pyyaml",
  "types-markdown",
]

[project.scripts]
claude-almanac = "claude_almanac.cli.main:main"
claude-almanac-retrieve-hook = "claude_almanac.hooks.retrieve:main"
claude-almanac-curate-hook = "claude_almanac.hooks.curate:main"
claude-almanac-upgrade-hook = "claude_almanac.hooks.upgrade:main"
claude-almanac-rollup-hook = "claude_almanac.hooks.rollup:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_almanac"]

[tool.hatch.build.targets.wheel.sources]
"src/claude_almanac" = "claude_almanac"

# Non-.py package data (templates, prompts, CSS) lives inside the package tree
# and ships automatically via `packages`. If you add a new non-.py asset
# directory, verify it's bundled via `unzip -l dist/*.whl | grep <name>`.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TID"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires live Ollama/network (skipped by default)"]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
